Move options to OpenAPI
