# Sources/PartoutCore/Connection/TunnelController.swift
@@ -25,11 +25,3 @@ extension TunnelController {
         await clearTunnelSettings(withKillSwitch: false)
     }
 }
-
-/// Common options to give to ``TunnelController``.
-public struct TunnelControllerOptions: Codable, Sendable {
-    public var dnsFallbackServers: [String] = []
-    public var logsSnapshots: Bool = false
-
-    public init() {}
-}
